--- a/about.html
+++ b/about.html
@@ -1,4 +1,9 @@
---- layout: page title: "About" description: "Hey, this is BY." header-img: "img/post-bg-rwd.jpg" ---
+---
+layout: page
+title: "About"
+description: "Hey, this is Frewen."
+header-img: "img/post-bg-rwd.jpg"
+---
 
 <!-- Language Selector -->
 <!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
